# user-management-apis

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/config/: settings.py
backend/scripts/: wait-for-db.py
backend/users/: api.py  models.py  serializers.py  urls.py
backend/users/tests/: conftest.py
backend/users/tests/api/integration/: test_api_integration.py
backend/users/tests/api/unit/: test_api_unit.py
frontend/: Dockerfile  README.md  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/components/: ButtonComponent.vue  DropDownComponent.vue  FormComponent.vue  FormInput.vue  ListComponent.vue  UserCardComponent.vue
frontend/src/components/widgets/: AlertComponent.vue
frontend/src/layouts/: StandardLayout.vue
frontend/src/router/: index.ts
frontend/src/utils/: displayLabelsUtils.ts  filtersUtils.ts  validationUtils.ts
frontend/src/views/: HomeView.vue  UserDetail.vue
